hydro_lang/tests/compile-fail-stable/monotone_map.rs
../compile-fail/monotone_map.rs